--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,15 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: 'edenfoods-site/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./edenfoods-site
 
       - name: Build
         run: npm run build
+        working-directory: ./edenfoods-site
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -40,7 +43,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'
+          path: './edenfoods-site/dist'
 
   deploy:
     environment:
