--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,14 +26,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ./edenfoods-site
 
       - name: Build
         run: npm run build
-        working-directory: ./edenfoods-site
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -41,7 +40,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './edenfoods-site/dist'
+          path: './dist'
 
   deploy:
     environment:
